--- a/package.json
+++ b/package.json
@@ -11,15 +11,18 @@
   "dependencies": {
     "@ark-ui/solid": "^3.12.1",
     "@fontsource/inter": "^5.1.0",
-    "remixicon": "^4.3.0",
     "solid-js": "^1.8.20"
   },
   "devDependencies": {
+    "@iconify-json/ph": "^1.2.0",
+    "@types/node": "^22.5.5",
     "autoprefixer": "^10.4.20",
     "fluid-tailwind": "^1.0.3",
     "postcss": "^8.4.47",
+    "tailwind-scrollbar": "^3.1.0",
     "tailwindcss": "^3.4.12",
     "typescript": "^5.5.3",
+    "unplugin-icons": "^0.19.3",
     "vite": "^5.4.1",
     "vite-plugin-solid": "^2.10.2"
   }
